Allow restoring default options

--- a/static/options.html
+++ b/static/options.html
@@ -23,7 +23,7 @@
       <textarea id="urls" name="urls" cols="30" rows="10"></textarea>
     </fieldset>
     <button type="submit" class="default">Save</button>
-    <button>Restore Defaults</button>
+    <button id="restore">Restore Defaults</button>
   </form>
   <script src="options.js"></script>
 </body>
