Enable configuring domains

--- a/static/options.html
+++ b/static/options.html
@@ -58,7 +58,8 @@
       </label>
       <textarea id="urls" name="urls" cols="30" rows="10"></textarea>
       <p>
-        Separate by commas or on separate lines.
+        Separate by commas or on separate lines. Subdomains will automatically be
+        included.
       </p>
     </fieldset>
     <button type="submit" class="default">Save</button>
