Add helpful message to options form

--- a/static/options.html
+++ b/static/options.html
@@ -62,6 +62,7 @@
         included.
       </p>
     </fieldset>
+    <p>You will need to reload any open tabs to see the changes take effect.</p>
     <button type="submit" class="default">Save</button>
     <button id="restore">Restore Defaults</button>
   </form>
